--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -49,7 +49,7 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="lastStartedAt">
+        <ng-container matColumnDef="startedAt">
             <th mat-header-cell *matHeaderCellDef> Started</th>
             <td mat-cell *matCellDef="let pipeline">
                 <h5>{{pipeline.startedAt ? (pipeline.startedAt | date:'dd.MM.yyyy HH:mm') : "n/a"}}</h5>
@@ -77,7 +77,7 @@
                     <button color="primary" mat-button mat-icon-button matTooltip="Live-Migrate processors"
                             matTooltipPosition="above"
                             [disabled]="!pipeline.running"
-                            (click)="pipelineOperationsService.migratePipelineProcessors(pipeline)">
+                            (click)="pipelineOperationsService.migratePipelineProcessors(pipeline._id)">
                         <i class="material-icons">swap_horizontal_circle_filled</i>
                     </button>
                 </span>
