--- a/ui/src/app/dashboard/components/widgets/wordcloud/wordcloud-widget.component.scss
+++ b/ui/src/app/dashboard/components/widgets/wordcloud/wordcloud-widget.component.scss
@@ -16,7 +16,7 @@
  *
  */
 
-.circleNumber {
+.wordcloud-panel {
   width: 100%;
   height: 100%;
   text-align: center;
@@ -45,6 +45,6 @@
 }
 
 .demo-chart {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
 }
