[STREAMPIPES-296] Add status visualization to live dashboard

--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -106,6 +106,12 @@
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></wordcloud-widget>
                 </div>
+                <div *ngIf="widget.widgetType === 'status'" class="h-100 p-0">
+                    <status-widget [gridsterItemComponent]="gridsterItemComponent"
+                                      [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                                      [widgetConfig]="configuredWidget"
+                                      [widgetDataConfig]="widgetDataConfig" class="h-100"></status-widget>
+                </div>
             </div>
         </div>
     </div>
