--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -112,6 +112,12 @@
                                       [widgetConfig]="configuredWidget"
                                       [widgetDataConfig]="widgetDataConfig" class="h-100"></status-widget>
                 </div>
+                <div *ngIf="widget.widgetType === 'bar-race'" class="h-100 p-0">
+                    <bar-race-widget [gridsterItemComponent]="gridsterItemComponent"
+                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                                   [widgetConfig]="configuredWidget"
+                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></bar-race-widget>
+                </div>
             </div>
         </div>
     </div>
