--- a/ui/src/app/dashboard/components/widgets/bar-race/bar-race-widget.component.scss
+++ b/ui/src/app/dashboard/components/widgets/bar-race/bar-race-widget.component.scss
@@ -16,12 +16,13 @@
  *
  */
 
-.wordcloud-panel {
+.status-panel {
   width: 100%;
   height: 100%;
   text-align: center;
   left: 50%;
-  display: inline-grid;
+  display: flex;
+  flex-direction: column;
   align-content: start;
 }
 
@@ -31,15 +32,25 @@
 
 .value-panel {
   display: flex;
-  height: 100%;
-  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
+  flex: 1;
 }
 
-.wordcloud {
-  height: 100%;
-  width: 100%;
+.status-light {
+  border-radius: 50%;
+  float: left;
+  margin: 10px 10px;
+}
+
+.status-light-red {
+  background-color: #C22;
+  box-shadow: #338 0 -1px 7px 1px, inset #600 0 -1px 9px, #F00 0 0px 8px;
+}
+
+.status-light-green {
+  background-color: #690;
+  box-shadow: #225 0 -1px 7px 1px, inset #460 0 -1px 9px, #7D0 0 0px 8px;
 }
