--- a/ui/src/app/dashboard/components/panel/dashboard-panel.component.css
+++ b/ui/src/app/dashboard/components/panel/dashboard-panel.component.css
@@ -29,3 +29,16 @@
     flex-direction: column;
     flex: 1 1 100%;
 }
+
+.options-bar {
+    padding:0px;
+    background-color:#f6f6f6;
+    border-bottom: 1px solid #cccccc;
+    margin-bottom: 10px;
+    height: 50px;
+}
+
+.options-bar-item {
+    display: inline;
+    margin-right: 10px;
+}
