--- a/ui/src/app/dashboard/components/grid/dashboard-grid.component.html
+++ b/ui/src/app/dashboard/components/grid/dashboard-grid.component.html
@@ -26,7 +26,9 @@
             <dashboard-widget (updateCallback)="propagateItemUpdate($event)"
                               (deleteCallback)="propagateItemRemoval($event)"
                               [item]="item" [widget]="item"
-            [editMode]="editMode" [gridsterItemComponent]="gridsterItemComponent"></dashboard-widget>
+                              [editMode]="editMode"
+                              [headerVisible]="headerVisible"
+                              [gridsterItemComponent]="gridsterItemComponent"></dashboard-widget>
         </gridster-item>
     </ng-container>
 </gridster>
