--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -18,7 +18,7 @@
 
 <div style="height:100%;">
     <div class="box">
-        <div class="assemblyOptions sp-blue-bg m-0 row header h-40" *ngIf="editMode">
+        <div class="assemblyOptions sp-blue-bg m-0 row header h-40" *ngIf="editMode && headerVisible">
             <div fxFlex="100" layout="row" fxLayoutAlign="end center">
                 <button mat-button mat-icon-button color="white" (click)="editWidget()">
                     <i class="material-icons">settings</i>
