[STREAMPIPES-272] Add API documentation

--- a/ui/src/app/login/components/login/login.component.html
+++ b/ui/src/app/login/components/login/login.component.html
@@ -65,6 +65,7 @@
                     style="min-width:0px;padding-left:20px;padding-right:20px;font-size:18px;">
                 View Docs
             </button>
+            <span style="margin-top:10px;"><a routerLink="/apidocs" routerLinkActive="active">View API docs</a></span>
         </div>
     </div>
 </div>
