--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import '~leaflet/dist/leaflet.css';
 @import '~material-design-icons/iconfont/material-icons.css';
 @import '~quill/dist/quill.snow.css';
+@import '~swagger-ui/dist/swagger-ui.css';
 
 @import '~roboto-fontface/css/roboto/roboto-fontface.css';
 
