--- a/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
+++ b/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.html
@@ -23,27 +23,29 @@
                 <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0" >Loading</mat-spinner>
             </div>
             <div fxLayoutAlign="center">
-                <h3>Please wait while your new adapter is being generated!</h3>
+                <h3>Please wait while your new adapter is being generated...</h3>
             </div>
         </div>
         <div fxLayout="column" *ngIf="adapterInstalled">
 
             <div *ngIf="adapterStatus.success">
-                The adapter was created successfully. You can now switch to the pipeline editor to create a pipeline based on your new element!
-
+                <div *ngIf="!isSetAdapter && !isTemplate">
+                    <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+                        <i class="material-icons">done</i>
+                        <span>&nbsp;Your new data stream is now available in the pipeline editor.</span>
+                    </div>
+                </div>
                 <div *ngIf="isSetAdapter">
-                    <div fxLayout="column">
-                        <div fxLayoutAlign="center" >
-                            <h3>Data Set adapter created. Data will be streamed once a pipeline is started!</h3>
-                        </div>
+                    <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+                        <i class="material-icons">done</i>
+                        <span>&nbsp;Your new data set is now available in the pipeline editor.</span>
                     </div>
                 </div>
 
                 <div *ngIf="isTemplate">
-                    <div fxLayout="column">
-                        <div fxLayoutAlign="center" >
-                            <h3>Template created. You or other users can now create adapters based on this template!</h3>
-                        </div>
+                    <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+                        <i class="material-icons">done</i>
+                        <span>Template created. You or other users can now create adapters based on this template.</span>
                     </div>
                 </div>
 
@@ -53,7 +55,10 @@
 
             </div>
             <div *ngIf="!adapterStatus.success">
-                Something went wrong during the adapter installation.
+                <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+                    <i class="material-icons">error</i>
+                    <span>Something went wrong during the adapter installation.</span>
+                </div>
             </div>
         </div>
     </div>
