--- a/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.scss
+++ b/ui/src/app/connect/dialog/adapter-started/adapter-started-dialog.component.scss
@@ -17,3 +17,10 @@
  */
 
 @import 'src/scss/sp/sp-dialog';
+
+.success-message {
+  text-align: center;
+  font-size: 14pt;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
