--- a/ui/src/app/dashboard/components/widgets/table/table-widget.component.css
+++ b/ui/src/app/dashboard/components/widgets/table/table-widget.component.css
@@ -24,3 +24,10 @@
 .mt-20 {
     margin-top:20px;
 }
+
+.main-panel {
+    width:100%;
+    height: 100%;
+    display:inline-grid;
+    align-content: center;
+}
