--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -58,7 +58,7 @@
                     <mat-spinner fxLayoutAlign="center" style="margin: 10px 0 5px 0">Loading</mat-spinner>
                 </div>
                 <div fxLayoutAlign="center">
-                    <h3>The system tries to guess the schema of the data</h3>
+                    <h3>Guessing the event schema...</h3>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <mat-icon style="margin-top: 10px" class="md-accent">warning</mat-icon>
                     <span style="width: 10px;"></span>
-                    <h3>System error while guess the schema of the data</h3>
+                    <h3>Sorry, there was an error while guessing the schema of your configured data source...</h3>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <button mat-button class="md-accent">
