--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -31,7 +31,8 @@
 @import '~shepherd.js/dist/css/shepherd-theme-default.css';
 @import "~ng-pick-datetime/assets/style/picker.min.css";
 @import '~leaflet/dist/leaflet.css';
-@import '~material-design-icons/iconfont/material-icons.css';
+@import '~material-icons/iconfont/material-icons.css';
+//@import '~material-design-icons/iconfont/material-icons.css';
 @import '~quill/dist/quill.snow.css';
 @import '~swagger-ui/dist/swagger-ui.css';
 
