[STREAMPIPES-304] Bump and migrate Jsplumb version

--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -24,7 +24,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~angular-ui-tree/dist/angular-ui-tree.min.css';
-@import '~jsplumb/dist/css/jsplumb.css';
+@import '~jsplumb/css/jsplumbtoolkit-defaults.css';
 @import '~ng-prettyjson/dist/ng-prettyjson.min.css';
 @import '~prismjs/themes/prism.css';
 @import '~angular-loading-bar/build/loading-bar.min.css';
@@ -35,6 +35,7 @@
 //@import '~material-design-icons/iconfont/material-icons.css';
 @import '~quill/dist/quill.snow.css';
 @import '~swagger-ui/dist/swagger-ui.css';
+@import '~perfect-scrollbar/css/perfect-scrollbar.css';
 
 @import '~roboto-fontface/css/roboto/roboto-fontface.css';
 
@@ -60,6 +61,7 @@
 @import './sp/pipeline-assembly.scss';
 @import './sp/widgets.scss';
 @import './sp/progress-bar.scss';
+@import './sp/jsplumb';
 
 @import './sp/input.ng1';
 @import './sp/documentation.ng1';
