--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.html
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.html
@@ -20,10 +20,9 @@
     <div class="pipeline-assembly-options sp-blue-bg">
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
             <button mat-button matTooltip="Save Pipeline" [matTooltipPosition]="'above'"
-                    style="display:flex;align-items:center;"
                     [disabled]="!PipelineValidationService.pipelineValid"
                     (click)="submit()" type="submit">
-                <mat-icon>save</mat-icon>&nbsp;<span>Save pipeline</span>
+                <i class="material-icons">save</i>&nbsp;<span>Save pipeline</span>
             </button>
             <button mat-button mat-icon-button matTooltip="Pan" [matTooltipPosition]="'above'"
                     [disabled]="!selectMode"
@@ -103,7 +102,7 @@
         </div>
     </div>
     <div id="outerAssemblyArea" class="outerAssembly sp-blue-border-nopadding">
-        <div id="assembly" class="canvas">
+        <div id="assembly" class="canvas jtk-surface jtk-surface-no-pan">
             <pipeline [pipelineValid]="pipelineValid"
                       [canvasId]="'assembly'"
                       [rawPipelineModel]="rawPipelineModel"
@@ -112,8 +111,8 @@
                       [pipelineCached]="pipelineCached"
                       [pipelineCacheRunning]="pipelineCacheRunning"
                       (pipelineCachedChanged)="pipelineCached=$event"
-                      (pipelineCacheRunningChanged)="pipelineCacheRunning=$event"
-            ></pipeline>
+                      (pipelineCacheRunningChanged)="pipelineCacheRunning=$event">
+            </pipeline>
         </div>
     </div>
 </div>
