--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.scss
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.scss
@@ -30,13 +30,12 @@
 }
 
 .outerAssembly {
-    position: relative;
+    //position: relative;
     left: 0px;
     top: 0px;
     overflow: visible;
     //box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
-    padding: 5px;
-    height: 100%;
+    //padding: 5px;
     flex: 1;
     width: 100%;
 }
@@ -46,12 +45,12 @@
 }
 
 .canvas {
-    overflow: visible;
-    position: absolute;
+    overflow: auto;
+    position: relative;
     left: 0px;
     top: 0px;
-    height: 300%;
-    width: 300%;
+    height: 100%;
+    width: 100%;
     z-index: 0;
     margin: -1px;
 
@@ -62,4 +61,9 @@
 
 .pipeline-assembly-options {
     color: white;
+}
+
+.jtk-surface-nopan {
+    overflow: scroll !important;
+    cursor:default;
 }
