--- a/ui/src/app/editor/components/pipeline/pipeline.component.html
+++ b/ui/src/app/editor/components/pipeline/pipeline.component.html
@@ -16,10 +16,12 @@
   ~
   -->
 
-<div *ngFor="let pipelineElement of rawPipelineModel" style="width:100%;height:100%;z-index:1">
-    <div *ngIf="pipelineElement.settings.disabled == undefined || !pipelineElement.settings.disabled" style="width:100%;height:100%;z-index:1">
+<div style="z-index: 1" [ngStyle]="{width: canvasWidth, height: canvasHeight}" #outerCanvas>
     <span id="{{pipelineElement.payload.dom}}" style="{{getElementCss(pipelineElement.settings)}}"
-          (click)="updateOptionsClick(pipelineElement.payload.dom)" (mouseenter)="updateMouseover(pipelineElement.payload.dom)" (mouseleave)="updateMouseover('')">
+          (click)="updateOptionsClick(pipelineElement.payload.dom)"
+          (mouseenter)="updateMouseover(pipelineElement.payload.dom)"
+          (mouseleave)="updateMouseover('')"
+          *ngFor="let pipelineElement of rawPipelineModel | enabledPipelineElement">
         <span style="z-index:5;"
               [ngClass]="getElementCssClasses(pipelineElement)">
             <div class="pipeline-element-progress-container sp-fade" *ngIf="pipelineElement.settings.loadingStatus">
@@ -45,4 +47,4 @@
         </pipeline-element-options>
     </span>
 </div>
-</div>
+
