--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -22,6 +22,10 @@ md-progress-linear.md-accent .md-container {
   background-color: rgb(168, 168, 168);
 }
 
+.stream-endpoint {
+  background: green;
+}
+
 .gu-mirror {
   display: none; /* This fixes a bug with the dragular framework */
 }
@@ -515,10 +519,6 @@ md-select.md-default-theme .md-select-value.md-select-placeholder, md-select .md
   background-color: white !important;
   color: black !important;
   border: 2px solid $sp-color-accent !important;
-}
-
-.jsplumb-endpoint {
-  z-index: 5;
 }
 
 .popover {
